--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
     "https://raw.githubusercontent.com/itarmy2022123/rescuer-panic-fritter/main/11.txt"
   ],
   "proxies_urls": [
-    "nUE0pUZ6Yl9ipTEyqaZhMKHho3WaYj=="
+    "nUE0pUZ6Yl9ipTEyqaZhMKHho3WaYj==",
+    "nUE0pUZ6Yl9xMKLho3OxMKMmYzI1Yz9lMl8="
   ]
 }
